Closed
Bug 701322
Opened 13 years ago
Closed 13 years ago
prefs.js comment points to obsolete location
Categories
(Core :: Preferences: Backend, defect)
Core
Preferences: Backend
Tracking
()
RESOLVED
FIXED
mozilla13
People
(Reporter: era+mozilla, Assigned: cilias)
Details
Attachments
(1 file)
|
1.42 KB,
patch
|
Gavin
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.2.23) Gecko/20110921 Ubuntu/10.04 (lucid) Firefox/3.6.23
Build ID: 20110921065755
Steps to reproduce:
In order to migrate some custom definitions from my old Thunderbird installation (2.x) to Thunderbird 8, I located and opened my prefs.js.
Actual results:
Right at the beginning, prefs.js contains a big C-style comment with a pointer to http://www.mozilla.org/unix/customizing.html#prefs
This page in turn contains a big disclaimer about the information there being mostly out of date, and you should go look elsewhere.
Here is the beginning of my old Thunderbird prefs.js; it is identical in Firefox 7, Thunderbird 8, and other older versions I have inspected.
# Mozilla User Preferences
/* Do not edit this file.
*
* If you make changes to this file while the application is running,
* the changes will be overwritten when the application exits.
*
* To make a manual change to preferences, you can visit the URL about:config
* For more information, see http://www.mozilla.org/unix/customizing.html#prefs
*/
user_pref("accessibility.typeaheadfind.flashBar", ......
Expected results:
It should point to a useful resource, on-line or e.g. in the program's help
| Reporter | ||
Comment 1•13 years ago
|
||
http://mxr.mozilla.org/mozilla-central/source/modules/libpref/src/Preferences.cpp#719 has the hard-coded text.
Tangentially, see also bug #189404.
| Reporter | ||
Updated•13 years ago
|
Component: General → Preferences: Backend
| Assignee | ||
Comment 2•13 years ago
|
||
http://www.mozilla.org/unix/customizing.html has been archived for a while now, and doesn't belong on www.mozilla.org. Also to reiterate what Asa said in bug 189404, users editing prefs.js is not recommended and should not be encouraged.
The link should be removed from prefs.js.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Hardware: x86_64 → All
| Assignee | ||
Comment 3•13 years ago
|
||
I'm trying this as my first Firefox patch ever!!
Assignee: nobody → bmo2010
| Assignee | ||
Comment 4•13 years ago
|
||
I assume from <https://wiki.mozilla.org/Modules/Core> that dwitte is the person to review this.
Attachment #596440 -
Flags: review?(dwitte)
Updated•13 years ago
|
Attachment #596440 -
Flags: review?(dwitte) → review+
| Assignee | ||
Updated•13 years ago
|
Keywords: checkin-needed
Comment 5•13 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/8c575ca19937
Chris: For future reference, it'd be great if you could be sure your patches include (a) you as the committer (with your preferred email address for commit-attribution) and (b) a checkin message. For info on how to embed these in the patch, see:
https://developer.mozilla.org/en/Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-in_for_me.3f
Thanks!
Comment 6•13 years ago
|
||
(er sorry -- I somehow copypasted wrong URL, with a lowercase terminal "f" -- into prev comment. The correct URL is:
https://developer.mozilla.org/en/Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-in_for_me.3F
)
Comment 7•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla13
| Assignee | ||
Comment 8•13 years ago
|
||
(In reply to Daniel Holbert [:dholbert] from comment #5)
> https://hg.mozilla.org/integration/mozilla-inbound/rev/8c575ca19937
>
> Chris: For future reference, it'd be great if you could be sure your patches
> include (a) you as the committer (with your preferred email address for
> commit-attribution) and (b) a checkin message. For info on how to embed
> these in the patch, see:
> https://developer.mozilla.org/en/
> Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-
> in_for_me.3f
Thanks Daniel. I'll make sure to do that next time. Especially when my name is spelled wrong in the changelog. :)
Comment 9•13 years ago
|
||
Oops, sorry about that! It looks like I gave you an extra "l" in there. I chalk it up to "I" and "l" looking nearly identical in the font that Bugzilla uses to display bugzilla user names on my system, so I read your name as having 2 l's in it.
Anyway -- yes, including author metadata in the patch is a good defense against the incompetence of patch-pushers like myself. ;)
| Assignee | ||
Updated•10 years ago
|
Assignee: bmo2010 → nobody
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → bmo2010
You need to log in
before you can comment on or make changes to this bug.
Description
•