Bug 701322: Remove comment pointing to stale URL from prefs.js. r=gavin